--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ opentelemetry-exporter-gcp-trace = "^1.4.0"
 psycopg2 = "^2.9.5"
 opentelemetry-instrumentation-psycopg2 = "^0.37b0"
 opentelemetry-instrumentation-requests = "^0.37b0"
+daphne = "^4.0.0"
 
 
 [build-system]
