--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ psycopg2 = "^2.9.5"
 opentelemetry-instrumentation-psycopg2 = "^0.37b0"
 opentelemetry-instrumentation-requests = "^0.37b0"
 daphne = "^4.0.0"
-opentelemetry-resourcedetector-gcp = "^1.4.0a0"
+opentelemetry-propagator-gcp = "^1.4.0"
+opentelemetry-instrumentation-asgi = "^0.37b0"
 
 
 [build-system]
