--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ opentelemetry-instrumentation-requests = "^0.37b0"
 daphne = "^4.0.0"
 opentelemetry-propagator-gcp = "^1.4.0"
 opentelemetry-instrumentation-asgi = "^0.37b0"
+opentelemetry-resourcedetector-gcp = "^1.4.0a0"
 
 
 [build-system]
