image の修正もれ

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -48,7 +48,7 @@ jobs:
       - name: Dockle
         uses: erzz/dockle-action@v1
         with:
-          image: jenkins-plus:dev
+          image: django-otel-cloud-trace:dev
           exit-code: '1'
           failure-threshold: fatal
 
